# pylorant-stats

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf.example  pyproject.toml  requirements.txt
backend/: main.py  requirements.txt
backend/src/api/: routes.py
backend/src/models/: cache.py  match.py
backend/src/services/: valorant_api.py
stats/: __init__.py  adapters.py  auth.py  urls.py  views.py
stats/api/: routes.py
valorant_stats/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
